--- a/default/tasks/main.yml
+++ b/default/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: default packages
+- name: Install packages
   apt: pkg={{ item }}
   sudo: yes
   with_items:
@@ -11,25 +11,25 @@
     - htop
     - iftop
 
-- name: user
+- name: Create user
   user: name={{ user }} shell='/bin/zsh' groups='sudo'
   sudo: yes
 
-- name: ssh key
+- name: Copy ssh key
   authorized_key: user={{ user }} key='ssh-rsa id_rsa.pub'
   sudo: no
 
-- name: oh-my-zsh
+- name: Clone oh-my-zsh
   git: repo='git://github.com/robbyrussell/oh-my-zsh.git'
        dest='/home/{{ user }}/.oh-my-zsh'
        accept_hostkey='yes'
   sudo: no
 
-- name: default rc
+- name: Copy default rc
   copy: src='vimrc' dest='/home/{{ user }}/.vimrc' owner={{ user }}
   sudo: no
 
-- name: zshrc
+- name: Setup zshrc
   template: src='zshrc' dest='/home/{{ user }}/.zshrc'
   sudo: no
 
